fix: fixed navigation menu to no wrap

--- a/article_hive_project/static/article_hive_project/css/style.css
+++ b/article_hive_project/static/article_hive_project/css/style.css
@@ -206,6 +206,10 @@ nav {
 	} */
 }
 
+nav li {
+	text-wrap: nowrap;
+}
+
 header img {
 	width: 13rem;
 
